<resources>
    <string name="app_name">Savoir Maigrir en Vidéo</string>
    <string name="app_version">Version 1.0</string>
    <string name="header_right_button">Je m\'inscris</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_decouvrir">Découvrir</string>
    <string name="menu_bilan">Bilan minceur</string>
    <string name="menu_temoignages">Témoignages</string>
    <string name="menu_recettes">Recettes</string>
    <string name="menu_recette">Recette</string>
    <string name="menu_mon_compte">Mon compte</string>
    <string name="button_register">je m\'inscris</string>
    <string name="welcome_message">Bonjour, bienvenue sur le programme pour maigrir et être bien dans sa peau</string>
    <string name="terms_of_service">Conditions Générales d\'Utilisation</string>
    <string name="landing_1">Decouvrez le programme</string>
    <string name="landing_2">Faites votre bilan minceur personnalise en video</string>
    <string name="landing_3">Temoignages</string>
    <string name="landing_4">Recettes</string>
    <string name="recipe_entree">Entrée</string>
    <string name="recipe_salad">Salade</string>
    <string name="recipe_plat">Plat</string>
    <string name="recipe_dessert">Dessert</string>
    <string name="recipe_soup">Soupe</string>
    <string name="recipe_preparation">Préparation</string>
    <string name="moncompte_title">Vous n\'avez pas d\'abonnement en cours</string>
    <string name="moncompte_subtitle">Abonnez-vous dès maintenant pour 4,99 €/semaine (sans engagement)</string>
    <string name="moncompte_BulletTittle">En vous abonnant à ce service, vous aurez immédiatement accès :</string>
    <string name="moncompte_Bullet1">✔ coaching vidéo quotidien de Jean-Michel Cohen</string>
    <string name="moncompte_Bullet2">✔ plans de repas personnalisés selon votre profil</string>
    <string name="moncompte_Bullet3">✔ des centaines de recettes diététiques savoureuses</string>
    <string name="moncompte_Bullet4">✔ des conseils minceur en vidéo pour toutes les situations</string>
    <string name="moncompte_Bullet5">✔ votre courbe de poids pour suivre vos progrès</string>
    <string name="moncompte_Bullet6">✔ un support-client efficace pour vous aider à réussir</string>
    <string name="welcome_account_1">Bonjour %@, c\'est le mer</string>
    <string name="welcome_account_2">credi de la semaine %d de votre programme</string>
    <string name="menu_account_coaching">Coaching</string>
    <string name="menu_account_repas">Repas</string>
    <string name="menu_account_recettes">Recettes</string>
    <string name="menu_account_webinars">Webinaires en direct</string>
    <string name="menu_account_exercices">Exercices</string>
    <string name="menu_account_poids">Suivi Du Poids</string>
    <string name="menu_account_compte">Mon Compte</string>
    <string name="lost_weight_text">Vous avez perdu </string>
    <string name="coaching_header">Coaching - Semane %d</string>
    <string name="coaching_archive_week">Semane %d</string>
    <string name="coaching_header_right">Archive</string>
    <string name="coaching_broadcast_string">Archive_week_selected</string>
    <string name="conseils_broadcast_string">Archive_category_selected</string>
    <string name="conseils_header_right">Voir tout</string>
    <string name="mon_compte_profil">PROFIL</string>
    <string name="mon_compte_objectif">OBJECTIF</string>
    <string name="mon_compte_programme">PROGRAMME</string>
    <string name="mon_compte_alertes">ALERTES</string>
    <string name="mon_compte_prenom">Prenom</string>
    <string name="mon_compte_sexe">Sexe</string>
    <string name="mon_compte_sexe_fem">Féminin</string>
    <string name="mon_compte_sexe_masc">Masculin</string>
    <string name="mon_compte_poids_depart">Poids départ (kg)</string>
    <string name="mon_compte_poids_vise">Poids de visé (kg)</string>
    <string name="mon_compte_taille">Taille (cm)</string>
    <string name="mon_compte_plans_repas">Plans de repas</string>
    <string name="mon_compte_plans_brunch">Brunch</string>
    <string name="mon_compte_plans_classique">Classique</string>
    <string name="mon_compte_plans_pour">Pour mincir à petits prix</string>
    <string name="mon_compte_plans_dejeuner">Sans déjeuner - déjeuner léger</string>
    <string name="mon_compte_plans_diner">Sans diner ou diner léger</string>
    <string name="mon_compte_plans_gluten">Sans gluten</string>
    <string name="mon_compte_plans_vache">Sans lait de vache</string>
    <string name="mon_compte_plans_laitages_avec">Sans laitages, avec fromage</string>
    <string name="mon_compte_plans_laitages_sans">Sans laitages, sans fromage</string>
    <string name="mon_compte_plans_viande_porc">Sans viande de porc</string>
    <string name="mon_compte_plans_petit_dejeuner">Sans petit-déjeuner</string>
    <string name="mon_compte_plans_special">Spécial colopathie</string>
    <string name="mon_compte_plans_vegetarien">Végétarien</string>
    <string name="mon_compte_plans_jeune_cohen">Jeûne Cohen 16h</string>
    <string name="mon_compte_plans_low_budget">Pour mincir à petits prix</string>
    <string name="mon_compte_plans_plat_prepares">Maigrir Sans Cuisiner</string>
    <string name="mon_compte_niveau_calorique">Niveau calorique</string>
    <string name="mon_compte_niveau_calorique_900">900 kcal</string>
    <string name="mon_compte_niveau_calorique_1200">1200 kcal</string>
    <string name="mon_compte_niveau_calorique_1400">1400 kcal</string>
    <string name="mon_compte_niveau_calorique_1600">1600 kcal</string>
    <string name="mon_compte_niveau_calorique_1800">1800 kcal</string>
    <string name="mon_compte_alertes_receive">Recevoir mes plans des repas par email</string>
    <string name="mon_compte_alertes_vos_plans">Vos plans de repas sont envoyés chaque vendredi</string>
    <string name="mon_compte_save">Sauvegarder</string>
    <string name="mon_compte_disconnect">Deconnexion</string>
    <string name="repas_header_meal_plans">Plan de repas</string>
    <string name="repas_header_shopping_list">Liste de courses</string>
    <string name="repas_header_meal_plan">Vous suivez actuellement le programme \n#program à #calorie/jour</string>
    <string name="repas_breakfast">Petit-Déjeuner</string>
    <string name="repas_lunch">Déjeuner</string>
    <string name="repas_dinner">Diner</string>
    <string name="repas_related_recipe">Recettes associéss</string>
    <string name="repas_footer">Pour recevoir chaque semaine vos plans de repas et listes de courses par Email, activez l\'alerte dans Mon compte</string>
    <string name="WEIGHT_GRAPH_WEIGHT_TIP">Notre conseil: pesez-vous régulièrement pour mettre votre courbe de poids à jour !</string>
    <string name="WEIGHT_GRAPH_ENTER_CURRENT_WEIGHT">Entrez votre poids actuel</string>
    <string name="btn_submit">Poster</string>
    <string name="WEIGHT_GRAPH_TARGET_WEIGHT">Poids visé</string>
    <string name="WEIGHT_GRAPH_CURRENT_BMI">IMC actuel</string>
    <string name="WEIGHT_GRAPH_WEIGHT_LOST">Poids perdu</string>
    <string name="WEIGHT_GRAPH_WEIGHT_LOG">Historique</string>
    <string name="NO_DATA">Pas de données</string>
    <string name="WEIGHT_GRAPH_STEPS_LOG">Historique</string>
    <string name="WEIGHT_GRAPH_DATE">Date</string>
    <string name="WEIGHT_GRAPH_SEE_MORE">Voir plus</string>
    <string name="WEIGHT_GRAPH_DEVICE">Appareil</string>
    <string name="WEIGHT_GRAPH_NO_MORE_CONTENTS_TO_SHOW">Fin du contenu</string>
    <string name="WEIGHT_GRAPH_EDIT_WEIGHT">Editer le Poids</string>
    <string name="WEIGHT_BUTTON">Courbe de Poids</string>
    <string name="WEIGHT_GRAPH_NO_DATA">Poids actuel: Pas de données</string>
    <string name="WEIGHT_GRAPH_CURRENT_WEIGHT_ASOF">Poids actuel: %@ kg le</string>
    <string name="btn_edit">Editer</string>
    <string name="btn_delete">Supprimer</string>
    <string name="WEIGHT_GRAPH_BROADCAST_DELETE">WEIGHT_GRAPH_DELETE</string>
    <string name="WEIGHT_GRAPH_BROADCAST_EDIT">WEIGHT_GRAPH_EDIT</string>
    <string name="ALERTMESSAGE_DELETE_MEAL">Voulez-vous vraiment supprimer cette entrée ?</string>
    <string name="btn_no">Non</string>
    <string name="btn_yes">Oui</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Annuler</string>
    <string name="btn_validate">Valider</string>
    <string name="ALERTMESSAGE_FIRSTNAME_EMPTY">Oops… Vous avez oublié d\'entrer votre prénom.</string>
    <string name="ALERTMESSAGE_HEIGHT">Oops… Vous avez oublié d\'entrer votre taille.</string>
    <string name="ALERTMESSAGE_CURRENTWEIGHT">Oops… Vous avez oublié d\'entrer votre poids actuel.</string>
    <string name="ALERTMESSAGE_TARGETWEIGHT">Oops… Vous avez oublié d\'entrer le poids que vous visez.</string>
    <string name="ALERTMESSAGE_EMAIL">Le format de votre e-mail est erronée. Veuillez entrer une adresse email valide .</string>
    <string name="ALERTMESSAGE_ERRORWEIGHT_RANGE">Veuillez vérifier que le poids indiqué est entre 40 et 200kg</string>
    <string name="SIGNUP_EMAIL_ERROR">Le format de votre e-mail est erronée. Veuillez entrer une adresse email valide .</string>
    <string name="ALERTMESSAGE_LASTNAME_EMPTY">Oops… Vous n\'avez pas entré votre nom de famille.</string>
    <string name="ALERTMESSAGE_PASSWORD_EMPTY">Pour compléter votre inscription, merci de saisir un mot de passe.</string>
    <string name="ALERTMESSAGE_GENDER_EMPTY">Oops… Vous avez oublié de préciser si vous êtes un homme ou une femme.</string>
    <string name="ALERTMESSAGE_COUNTRY_EMPTY"> Oops… ressemble vous avez raté votre pays.</string>
    <string name="ALERTMESSAGE_FORM_EMPTY_TITLE">Oops… Vous avez oublié de remplir certains champs.</string>
    <string name="ALERTMESSAGE_PSEUDO_EMPTY">Ce pseudo est déjà utilisé par quelqu\'un d\'autre.</string>
    <string name="ALERTMESSAGE_BDAY_EMPTY">Date de naissance est requise.</string>
    <string name="ALERTMESSAGE_ACCOUNT_EXISTS">Ce email est déjà utilisé par quelqu\'un d\'autre.</string>
    <string name="bilan_broadcast_subscribe">SUBSCRIBE_BILAN</string>
    <string name="bilan_subscribe_btn">Je m\'abone</string>
    <string name="bilan_continue">Je continue</string>
    <string name="bilan_results_continue">Continuer</string>
    <string name="login_login_button">Connexion</string>
    <string name="login_registration_button">Je m\'inscris</string>
    <string name="login_login_account_button">Deja inscrit ? Connectez-vous ! </string>
    <string name="login_free_button">Découvrir l\’appli</string>
    <string name="login_programme">Programme en vidéo</string>
    <string name="login_back_to_landing">Pas encore inscrit ?</string>
    <string name="login_email_placeholder">Votre adresse Email</string>
    <string name="login_password_placeholder">Votre mot de passe</string>
    <string name="registration_fn">Prènom</string>
    <string name="registration_ln">Nom</string>
    <string name="registration_email">E-mail</string>
    <string name="inscription_headerTitle">Bienvenu dans mon\napplication</string>
    <string name="inscription_headerDesc">Choisissez ci-dessous la\nversion qui vous intéresses</string>
    <string name="inscription_description">Coaching video avec plans de repas\npersonalisés, recettes et webinaires</string>
    <string name="incription_996mois">€ 9,96/ mois</string>
    <string name="incription_3mois">3 mois € 29,90</string>
    <string name="incription_832mois">€ 8,32/ mois</string>
    <string name="incription_6mois">6 mois € 49,90</string>
    <string name="registration_bravoWelcome">Bravo et bienvenue dans votre programme Savoir Maigrir</string>
    <string name="registration_validateAccount">Pour valider votre compte :</string>
    <string name="registration_createPassword">Créez un mot de passe</string>
    <string name="registration_choosePseudo">Choisissez un pseudo pour participer aux webinaires en direct</string>
</resources>