<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_bg">

    <Button
        android:id="@+id/login_button"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:background="@drawable/button_light_border_roundedcorners"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:text="@string/login_login_button"
        style="@style/darkGrayNormalMedium"
        android:clickable="true"
        android:onClick="goToLoginPage"/>

    <ImageView
        android:id="@+id/login_iv"
        android:layout_below="@id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/smv_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_below="@id/login_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/darkGrayNormalXLarge"
        android:text="@string/login_programme"/>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:background="@drawable/button_no_border_white"
        android:layout_marginTop="60dp"
        android:text="@string/login_registration_button"
        style="@style/loginRegistrationButton"
        android:layout_below="@+id/login_subtitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/login_login_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        style="@style/whiteNormalMedium"
        android:id="@+id/login_account_exist_tv"
        android:clickable="true"
        android:onClick="goToLoginPage"/>


    <TextView
        android:text="@string/login_free_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        style="@style/whiteNormalMedium"
        android:id="@+id/login_free_tv"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="goToFreePart"/>

</RelativeLayout>