<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <include
        android:id="@+id/registrationform2_headermenu"
        layout="@layout/header_menu"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_gray_separator"
        android:padding="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/greeting_jmc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/registrationform2_headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/inscription_headerTitle"
                android:textColor="@color/bg_orangedark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/registrationform2_headerDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/inscription_headerDesc"
                android:textColor="@color/colorContenText"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_separator" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:gravity="left"
        android:includeFontPadding="false"
        android:maxLines="4"
        android:minLines="3"
        android:paddingBottom="20dp"
        android:paddingLeft="20px"
        android:paddingTop="20dp"
        android:text="@string/inscription_description"
        android:textColor="@color/colorContenText"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/incription_buttonContainer_996"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_normal_offer"
        android:orientation="vertical"
        android:onClick="subscribeTo3Months"
        android:clickable="true">

        <TextView
            android:id="@+id/firstTextView_996"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incription_996mois"
            android:textColor="#000"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/secondTextView_996"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incription_3mois"
            android:textColor="#000"></TextView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <LinearLayout
        android:id="@+id/incription_buttonContainer_832"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_discounted_16"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingTop="10dp"
        android:clickable="true"
        android:onClick="subscribeTo6Months">

        <TextView
            android:id="@+id/firstTextView_832"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incription_832mois"
            android:textColor="#000"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/secondTextView_832"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incription_6mois"
            android:textColor="#000"></TextView>
    </LinearLayout>







</LinearLayout>