<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="15dp"
        android:weightSum="1"
        android:layout_weight=".4">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:text="@string/registration_bravoWelcome"
          android:textAlignment="center"
          android:gravity="center_vertical"
          style="@style/orangeHeaderText"
          android:layout_weight=".3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/greeting_jmc"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_weight=".6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/registration_validateAccount"
            android:gravity="bottom"
            style="@style/boldBlackText"
            android:layout_weight=".1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".6"
        android:background="@color/gray_background"
        android:padding="15dp"
        android:weightSum="100">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_validateAccount"
            android:gravity="bottom"
            android:layout_weight="5"
            style="@style/regBlackText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_weight="15"
            android:background="@drawable/button_white_edittext_background"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_createPassword"
            android:gravity="bottom"
            android:layout_weight="5"
            style="@style/regBlackText"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_weight="15"
            android:background="@drawable/button_white_edittext_background"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_choosePseudo"
            android:gravity="bottom"
            android:layout_weight="5"
            style="@style/regBlackText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_weight="15"
            android:background="@drawable/button_white_edittext_background"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/btn_validate"
            style="@style/OrangeButton"
            android:textSize="20dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"/>
        </LinearLayout>
</LinearLayout>
