<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_text_bilan"
    android:orientation="vertical">

    <include
        android:id="@+id/registrationform_headermenu"
        layout="@layout/header_menu"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_separator" />

    <RelativeLayout
        android:id="@+id/firstNameContainer"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/monCompteHeader"
        android:padding="5dp"
        tools:style="@style/RepasContent">

        <EditText
            android:id="@+id/reg_firstName"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|left"
            android:hint="@string/registration_fn"
            android:inputType="textCapWords|text"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#cacaca" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_separator" />

    <RelativeLayout
        android:id="@+id/lastNameContainer"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/monCompteHeader"
        android:padding="5dp">

        <EditText
            android:id="@+id/reg_lastName"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|left"
            android:hint="@string/registration_ln"
            android:inputType="textCapWords|text"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#cacaca" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_separator" />

    <RelativeLayout
        android:id="@+id/emailContainer"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/monCompteHeader"
        android:padding="5dp">

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|left"
            android:hint="@string/registration_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#cacaca" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_separator" />
    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:indeterminateDrawable="@drawable/animateprogress"
            android:visibility="visible" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/emailContainer">

        <Button
            android:id="@+id/registration_continuer"
            style="@style/loginRegistrationButton"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_orange_bilanminceur"
            android:clickable="true"
            android:text="@string/bilan_results_continue"
            android:textColor="@android:color/white"
            android:onClick="validateRegistrationForm"/>

        <TextView
            android:text="@string/login_login_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_continuer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            style="@style/whiteNormalMedium"
            android:id="@+id/reg_login_account_exist_tv"
            android:clickable="true" />

    </RelativeLayout>


</LinearLayout>